--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -5,7 +5,8 @@ LFLAGS = -m64 -ldl
 EVENT_LIB = $(wildcard 3rd/libevent/.libs/*.a) -lrt
 INCLUED_EVENT= -I3rd/libevent/include
 
-ifdef MAC
+#mac
+ifeq ($(shell uname), Darwin)
 	EVENT_LIB = $(wildcard /usr/local/Cellar/libevent/2.1.8/lib/*.a)
 	INCLUED_EVENT = -I/usr/local/Cellar/libevent/2.1.8/include
 endif
@@ -38,6 +39,7 @@ default : $(TARGET)
 rebuild : clean default
 
 objs/%.d: %.cpp | dircheck
+	$(MAKE) -C common
 	@$(CC) -MM $(CFLAGS) $< | sed 's,\($*\)\.o[ :]*,objs/\1.o $@ : ,g' >$@
 
 objs/%.o: %.cpp
@@ -49,6 +51,7 @@ dircheck:
 -include $(DEPS)
 
 clean :
+	$(MAKE) clean -C common
 	rm -rf $(TARGET) objs/*
 	
 $(TARGET) : $(OBJS)
