--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -141,4 +141,6 @@
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  
+  <ImportGroup Label="ExtensionTargets">
+  </ImportGroup>
+</Project>
