--- a/client/protobuf-net/src/ProtoGen/ProtoGen.csproj
+++ b/client/protobuf-net/src/ProtoGen/ProtoGen.csproj
@@ -58,6 +58,7 @@
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'iOS|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -75,6 +76,7 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Unity|AnyCPU'">
     <OutputPath>bin\Unity\</OutputPath>
@@ -93,6 +95,7 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'CoreOnly|AnyCPU'">
     <OutputPath>bin\CoreOnly\</OutputPath>
@@ -110,6 +113,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -119,6 +123,94 @@
   <ItemGroup>
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="protobuf-net\BclHelpers.cs" />
+    <Compile Include="protobuf-net\BufferExtension.cs" />
+    <Compile Include="protobuf-net\BufferPool.cs" />
+    <Compile Include="protobuf-net\CallbackAttributes.cs" />
+    <Compile Include="protobuf-net\Compiler\CompilerContext.cs" />
+    <Compile Include="protobuf-net\Compiler\CompilerDelegates.cs" />
+    <Compile Include="protobuf-net\Compiler\Local.cs" />
+    <Compile Include="protobuf-net\DataFormat.cs" />
+    <Compile Include="protobuf-net\Extensible.cs" />
+    <Compile Include="protobuf-net\ExtensibleUtil.cs" />
+    <Compile Include="protobuf-net\GlobalSuppressions.cs" />
+    <Compile Include="protobuf-net\Helpers.cs" />
+    <Compile Include="protobuf-net\IExtensible.cs" />
+    <Compile Include="protobuf-net\IExtension.cs" />
+    <Compile Include="protobuf-net\ImplicitFields.cs" />
+    <Compile Include="protobuf-net\KeyValuePairProxy.cs" />
+    <Compile Include="protobuf-net\Meta\AttributeMap.cs" />
+    <Compile Include="protobuf-net\Meta\BasicList.cs" />
+    <Compile Include="protobuf-net\Meta\CallbackSet.cs" />
+    <Compile Include="protobuf-net\Meta\MetaType.cs" />
+    <Compile Include="protobuf-net\Meta\RuntimeTypeModel.cs" />
+    <Compile Include="protobuf-net\Meta\SubType.cs" />
+    <Compile Include="protobuf-net\Meta\TypeFormatEventArgs.cs" />
+    <Compile Include="protobuf-net\Meta\TypeModel.cs" />
+    <Compile Include="protobuf-net\Meta\ValueMember.cs" />
+    <Compile Include="protobuf-net\NetObjectCache.cs" />
+    <Compile Include="protobuf-net\PrefixStyle.cs" />
+    <Compile Include="protobuf-net\ProtoContractAttribute.cs" />
+    <Compile Include="protobuf-net\ProtoConverterAttribute.cs" />
+    <Compile Include="protobuf-net\ProtoEnumAttribute.cs" />
+    <Compile Include="protobuf-net\ProtoException.cs" />
+    <Compile Include="protobuf-net\ProtoIgnoreAttribute.cs" />
+    <Compile Include="protobuf-net\ProtoIncludeAttribute.cs" />
+    <Compile Include="protobuf-net\ProtoMemberAttribute.cs" />
+    <Compile Include="protobuf-net\ProtoReader.cs" />
+    <Compile Include="protobuf-net\ProtoWriter.cs" />
+    <Compile Include="protobuf-net\SerializationContext.cs" />
+    <Compile Include="protobuf-net\Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\ArrayDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\BlobSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\BooleanSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\ByteSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\CharSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\CompiledSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\DateTimeSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\DecimalSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\DefaultValueDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\DoubleSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\EnumSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\FieldDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\GuidSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\ImmutableCollectionDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\Int16Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\Int32Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\Int64Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\IProtoSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\IProtoTypeSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\ISerializerProxy.cs" />
+    <Compile Include="protobuf-net\Serializers\KeyValuePairDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\ListDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\MemberSpecifiedDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\NetObjectSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\NullDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\ParseableSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\PropertyDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\ProtoDecoratorBase.cs" />
+    <Compile Include="protobuf-net\Serializers\ReflectedUriDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\SByteSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\SingleSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\StringSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\SubItemSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\SurrogateSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\SystemTypeSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\TagDecorator.cs" />
+    <Compile Include="protobuf-net\Serializers\TimeSpanSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\TupleSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\TypeSerializer.cs" />
+    <Compile Include="protobuf-net\Serializers\UInt16Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\UInt32Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\UInt64Serializer.cs" />
+    <Compile Include="protobuf-net\Serializers\UriDecorator.cs" />
+    <Compile Include="protobuf-net\ServiceModel\ProtoBehaviorAttribute.cs" />
+    <Compile Include="protobuf-net\ServiceModel\ProtoBehaviorExtensionElement.cs" />
+    <Compile Include="protobuf-net\ServiceModel\ProtoEndpointBehavior.cs" />
+    <Compile Include="protobuf-net\ServiceModel\ProtoOperationBehavior.cs" />
+    <Compile Include="protobuf-net\ServiceModel\XmlProtoSerializer.cs" />
+    <Compile Include="protobuf-net\SubItemToken.cs" />
+    <Compile Include="protobuf-net\WireType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="csharp.xslt">
@@ -155,6 +247,7 @@
     <Content Include="common.xslt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="protobuf-net\Web\TODO.txt" />
     <Content Include="vb.xslt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
