--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="src\common\network\NetworkStream.cpp" />
     <ClCompile Include="src\common\network\TcpConnection.cpp" />
     <ClCompile Include="src\common\network\TcpListener.cpp" />
+    <ClCompile Include="src\test_server\addressbook.pb.cc" />
     <ClCompile Include="src\test_server\main.cpp" />
     <ClCompile Include="src\test_server\test_client.cpp" />
     <ClCompile Include="src\test_server\test_server.cpp" />
@@ -37,6 +38,7 @@
     <ClInclude Include="src\common\network\TcpConnection.h" />
     <ClInclude Include="src\common\network\TcpListener.h" />
     <ClInclude Include="src\common\objectpool.h" />
+    <ClInclude Include="src\test_server\addressbook.pb.h" />
     <ClInclude Include="src\test_server\test_client.h" />
     <ClInclude Include="src\test_server\test_server.h" />
   </ItemGroup>
@@ -102,11 +104,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)..\server\src\3rd\libevent\WIN32-Code\nmake;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\include;$(SolutionDir)..\server\src\3rd\libevent\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>$(SolutionDir)..\server\src\3rd\libevent\libevent.lib;$(SolutionDir)..\server\src\3rd\libevent\libevent_core.lib;$(SolutionDir)..\server\src\3rd\libevent\libevent_extras.lib;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\lib\libprotobuf.lib;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\lib\libprotobuf-lite.lib;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\lib\libprotoc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)..\server\src\3rd\libevent\libevent.lib;$(SolutionDir)..\server\src\3rd\libevent\libevent_core.lib;$(SolutionDir)..\server\src\3rd\libevent\libevent_extras.lib;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\Debug\libprotobuf.lib;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\Debug\libprotobuf-lite.lib;$(SolutionDir)..\server\src\3rd\protobuf-2.6.1\vsprojects\Debug\libprotoc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
