--- a/server/server.vcxproj.filters
+++ b/server/server.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\test_server\test_client.cpp">
       <Filter>src\test_server</Filter>
     </ClCompile>
+    <ClCompile Include="src\test_server\addressbook.pb.cc">
+      <Filter>src\test_server</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common\common.h">
@@ -81,6 +84,9 @@
       <Filter>src\common\network</Filter>
     </ClInclude>
     <ClInclude Include="src\test_server\test_client.h">
+      <Filter>src\test_server</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test_server\addressbook.pb.h">
       <Filter>src\test_server</Filter>
     </ClInclude>
   </ItemGroup>
